--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ url:          "" # the base hostname & protocol for your site, e.g. http://examp
 markdown:       kramdown
 highlight:      rouge
 encoding:       utf-8
-theme:          jekyll-theme-clean-blog
+#theme:          jekyll-theme-clean-blog
 paginate:       5
 paginate_path:  "/posts/page:num/"
 
